# operating-system

./: .editorconfig  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: codecov.yml  rust.yml
bankers_algorithm/: Cargo.toml
bankers_algorithm/src/: bankers_algorithm.rs  lib.rs  main.rs  typedef.rs  util.rs
bankers_algorithm/tests/: print_test.rs  test_alagorithm.rs
device_malloc_n_release/: Cargo.toml  README.md
device_malloc_n_release/src/: device.rs  lib.rs  main.rs  typedef.rs  util.rs
device_malloc_n_release/tests/: print.rs  wtf.rs
hrrn/: Cargo.toml
hrrn/src/: hrrn.rs  main.rs
memory_alloc/: Cargo.toml
memory_alloc/src/: lib.rs  main.rs  memory_alloc.rs  util.rs
memory_alloc/src/algorithm/: bf.rs  ff.rs  mod.rs  nf.rs  typedef.rs
memory_alloc/tests/: best_fit.rs  first_fit.rs  next_fit.rs  test_util.rs
page_replacement/: Cargo.toml  README.md
page_replacement/src/: lib.rs  main.rs  typedef.rs
page_replacement/src/algorithm/: fifo.rs  lru.rs  mod.rs
page_replacement/tests/: fifo.rs  lru.rs
producer_consumer/: Cargo.toml
producer_consumer/src/: lib.rs  main.rs  producer_consumer.rs  util.rs
producer_consumer/tests/: test_pcb.rs  test_run.rs
round_robin/: Cargo.toml  README.md
round_robin/src/: lib.rs  main.rs  round_robin.rs  typedef.rs  util.rs
round_robin/tests/: test_pcb.rs  test_run.rs
src/: lib.rs  main.rs
src/algorithmic/: hrrn.rs
