[package]
name = "operating-system"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "operating_system"
path = "src/main.rs"

[dependencies]
ulid = "0.5.0"
rand = "0.8.4"
crossterm = "0.22"
prettytable-rs = "^0.8"
